--- a/pdf-validator-test/src/main/config/tests.properties
+++ b/pdf-validator-test/src/main/config/tests.properties
@@ -1,1 +1,1 @@
-service_url=http://dds.webmedia.int:8081/dss-webapp-test/wservice/validationService
+service_url=http://localhost:8080/dss-webapp-test/wservice/validationService
