--- a/pdf-validator-test/pom.xml
+++ b/pdf-validator-test/pom.xml
@@ -27,6 +27,12 @@
 			<version>2.4.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+			<scope>test</scope>
+        </dependency>
+
 	</dependencies>
 	
 </project>
