--- a/dss-document/src/main/resources/document-validators.properties
+++ b/dss-document/src/main/resources/document-validators.properties
@@ -1,4 +1,4 @@
-ASiC=eu.europa.esig.dss.asic.validation.ASiCContainerValidator
+#ASiC=eu.europa.esig.dss.asic.validation.ASiCContainerValidator
 PAdES=eu.europa.esig.dss.pades.validation.PDFDocumentValidator
-XAdES=eu.europa.esig.dss.xades.validation.XMLDocumentValidator
-CAdES=eu.europa.esig.dss.cades.validation.CMSDocumentValidator
+#XAdES=eu.europa.esig.dss.xades.validation.XMLDocumentValidator
+#CAdES=eu.europa.esig.dss.cades.validation.CMSDocumentValidator
