Added embedded Jetty test server to run functional tests

--- a/pdf-validator-test/pom.xml
+++ b/pdf-validator-test/pom.xml
@@ -16,7 +16,20 @@
 	<artifactId>pdf-validator-test</artifactId>
 	
 	<dependencies>
-		<dependency>
+        <dependency>
+            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+            <artifactId>pdf-validator-webapp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-webapp</artifactId>
+        </dependency>
+
+        <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
