--- a/pdf-validator-test/src/main/config/tests.properties
+++ b/pdf-validator-test/src/main/config/tests.properties
@@ -1,1 +1,7 @@
 service_url=http://localhost:8080/dss-webapp-test/wservice/validationService
+
+testserver.context=/dss-webapp-test
+testserver.deploy.base.directory=/Users/NortalMihkel/projects/pdfValidator/pdf-validator-webapp
+testserver.deploy.war=/target/pdf-validator-webapp-4.5.RC1.war
+testserver.deploy.webapp=/src/main/webapp
+testserver.deploy.webapp.xml=/src/main/webapp/WEB-INF/web.xml
