--- a/pdf-validator-test/src/main/config/tests.properties.sample
+++ b/pdf-validator-test/src/main/config/tests.properties.sample
@@ -1,1 +1,2 @@
 service_url=http://dds.webmedia.int:8081/dss-webapp-test/wservice/validationService
+deploy_war=/path/to/pdf-validator-webapp/target/webapp.war
