--- a/pdf-validator-test/pom.xml
+++ b/pdf-validator-test/pom.xml
@@ -19,6 +19,7 @@
         <dependency>
             <groupId>eu.europa.ec.joinup.sd-dss</groupId>
             <artifactId>pdf-validator-webapp</artifactId>
+            <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
