--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18.1</version>
 				<configuration>
 					<!-- Default test configuration -->
 					<skipTests>true</skipTests>
@@ -300,6 +301,7 @@
             <dependency>
                 <groupId>eu.europa.ec.joinup.sd-dss</groupId>
                 <artifactId>pdf-validator-webapp</artifactId>
+                <type>war</type>
                 <version>${project.version}</version>
             </dependency>
 			<dependency>
@@ -630,16 +632,7 @@
 			<url>http://joinup.ec.europa.eu/site/sd-dss/maven2</url>
 		</repository>
 	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>codehaus snapshot repository</id>
-			<url>http://snapshots.repository.codehaus.org/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</pluginRepository>
-	</pluginRepositories>
-
+	
 	<distributionManagement>
 		<repository>
 			<id>joinup-nexus</id>
