--- a/dss-webservices/pom.xml
+++ b/dss-webservices/pom.xml
@@ -65,6 +65,20 @@
             <artifactId>cxf-rt-frontend-jaxws</artifactId>
             <version>2.7.13</version>
         </dependency>
+
+        <!-- Logging -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+		</dependency>
     </dependencies>
     
 </project>
