VAL-21 Make application-override optinal

--- a/pdf-validator-tsl-downloader/pom.xml
+++ b/pdf-validator-tsl-downloader/pom.xml
@@ -59,7 +59,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>1.2.5.RELEASE</version>
+                <version>${spring.boot.version}</version>
                 <executions>
                     <execution>
                         <goals>
