--- a/pdf-validator-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/pdf-validator-webapp/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,11 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:spring/applicationContext.xml</param-value>
 	</context-param>
+	
+	<context-param>
+		<param-name>spring.profiles.default</param-name>
+		<param-value>production</param-value>
+	</context-param>
 
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
