--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
         <language.level>1.7</language.level>
 		<log4j.version>1.2.17</log4j.version>
 		<spring.version>4.2.0.RELEASE</spring.version>
-        <spring.boot.version>1.2.5.RELEASE</spring.boot.version>
+        <spring.boot.version>1.3.0.M4</spring.boot.version>
 		<tiles.version>2.2.2</tiles.version>
 		<slf4j.version>1.6.6</slf4j.version>
 		<logback-classic.version>1.0.13</logback-classic.version>
@@ -390,6 +390,13 @@
                 <scope>import</scope>
             </dependency>
 
+            <dependency>
+                <groupId>org.glassfish.jersey.core</groupId>
+                <artifactId>jersey-client</artifactId>
+                <version>2.21</version>
+            </dependency>
+
+
 			<!-- Public Dependencies -->
             <dependency>
                 <groupId>org.json</groupId>
@@ -636,6 +643,17 @@
         </dependencies>
 	</dependencyManagement>
 	<repositories>
+        <repository>
+            <id>spring-snapshots</id>
+            <url>http://repo.spring.io/snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>spring-milestones</id>
+            <url>http://repo.spring.io/milestone</url>
+        </repository>
 		<repository>
 			<id>jboss-public</id>
 			<url>https://repository.jboss.org/nexus/</url>
@@ -657,6 +675,16 @@
 			<url>http://joinup.ec.europa.eu/site/sd-dss/maven2</url>
 		</repository>
 	</repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-snapshots</id>
+            <url>http://repo.spring.io/snapshot</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>spring-milestones</id>
+            <url>http://repo.spring.io/milestone</url>
+        </pluginRepository>
+    </pluginRepositories>
 	
 	<distributionManagement>
 		<repository>
