when app context gets initialized and spring profile is development log warning

--- a/pdf-validator-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/pdf-validator-webapp/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 	</context-param>
 
 	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+		<listener-class>eu.europa.esig.dss.web.context.CustomizedContextLoaderListener</listener-class>
 	</listener>
 
 	<listener>
