VAL-23 TSL Status monitoring support added to PDF monitoring service

--- a/pdf-validator-monitoring/src/main/resources/config/application.properties
+++ b/pdf-validator-monitoring/src/main/resources/config/application.properties
@@ -3,6 +3,7 @@ spring.messages.basename=messages/messages
 
 monitoring.host=http://localhost:8080
 monitoring.path=/pdf-validator-webapp/wservice/validationService
+monitoring.tslStatusPath=/pdf-validator-webapp/status/tsl
 
 # Default monitoring interval is 5 min
 monitoring.requestInterval=300000
