--- a/pdf-validator-monitoring/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/pdf-validator-monitoring/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -14,6 +14,11 @@
       "name": "monitoring.request.interval",
       "type": "java.lang.String",
       "description": "How often to make request to PDF Validator Service"
+    },
+    {
+      "name": "monitoring.tslStatusPath",
+      "type": "java.lang.String",
+      "description": "Set path where to get TSL refresh information"
     }
   ]
 }
