--- a/pdf-validator-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/pdf-validator-webapp/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 	
 	<context-param>
 		<param-name>spring.profiles.default</param-name>
-		<param-value>production</param-value>
+		<param-value>development</param-value>
 	</context-param>
 
 	<listener>
@@ -46,5 +46,20 @@
 		<servlet-name>CXFServlet</servlet-name>
 		<url-pattern>/wservice/*</url-pattern>
 	</servlet-mapping>
+
+    <servlet>
+        <servlet-name>status</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+        <init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>classpath:spring/applicationContext-servlet.xml</param-value>
+		</init-param>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>status</servlet-name>
+        <url-pattern>/status/*</url-pattern>
+    </servlet-mapping>
 
 </web-app> 
