oragnized pdf validator tests and changed contextlistenerlogger's implementing interface to a more appropriate one

--- a/pdf-validator-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/pdf-validator-webapp/src/main/webapp/WEB-INF/web.xml
@@ -15,12 +15,13 @@
 	</context-param>
 
 	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+		<listener-class>eu.europa.esig.dss.web.context.ContextListenerLogger</listener-class>
 	</listener>
 
 	<listener>
-		<listener-class>eu.europa.esig.dss.web.context.ContextLoaderListenerLogger</listener-class>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+
 
 	<listener>
 		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
