VAL-23 Set to production profile

--- a/pdf-validator-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/pdf-validator-webapp/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 	
 	<context-param>
 		<param-name>spring.profiles.default</param-name>
-		<param-value>development</param-value>
+		<param-value>production</param-value>
 	</context-param>
 
 	<listener>
