--- a/pdf-validator-test/pom.xml
+++ b/pdf-validator-test/pom.xml
@@ -48,5 +48,19 @@
         </dependency>
 
 	</dependencies>
-	
+	<build>
+	<plugins>
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<version>2.18.1</version>
+		<configuration>
+			<skipTests>false</skipTests>
+			<includes>
+				<include>**/*Tests.java</include>
+			</includes>
+		</configuration>
+	</plugin>
+	</plugins>
+	</build>
 </project>
