VAL-18 Check LOTL signature & Trust anchor's are now configurable through cert loading from JKS keystore & Added new module to generate keystore

--- a/pdf-validator-webapp/pom.xml
+++ b/pdf-validator-webapp/pom.xml
@@ -20,6 +20,16 @@
 			<resource>
 				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
+				<excludes>
+					<exclude>keystore.jks</exclude>
+				</excludes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+				<includes>
+					<include>keystore.jks</include>
+				</includes>
 			</resource>
 		</resources>
 		<plugins>
