--- a/pdf-validator-webapp/src/main/resources/application.properties
+++ b/pdf-validator-webapp/src/main/resources/application.properties
@@ -6,3 +6,8 @@ datasource.password =
 trusted.list.source.lotlUrl=https://ec.europa.eu/information_society/policy/esignature/trusted-list/tl-mp.xml
 trusted.list.source.tslRefreshPolicy=WHEN_NECESSARY_OR_INDETERMINATE
 trusted.list.source.fileCacheDirectory=
+
+# keystore is / will be stored in etc folder of Tomcat. If not exists, DSS will copy the embedded keystore (dss-demo-webapp/src/main/resources/keystore.jks)
+keystore.type = JKS
+keystore.filename = keystore.jks
+keystore.password = pdf-validator-password
