--- a/pdf-validator-distribution/pom.xml
+++ b/pdf-validator-distribution/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>pdf-validator-monitoring</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+            <artifactId>pdf-validator-keystore-generator</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
