VAL-18 Replaced maven-assembly-plugin with spring-boot-maven-plugin for keystore generator module

--- a/pdf-validator-keystore-generator/pom.xml
+++ b/pdf-validator-keystore-generator/pom.xml
@@ -66,25 +66,18 @@
             </plugin>
 
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.boot.version}</version>
                 <executions>
                     <execution>
-                        <phase>package</phase>
                         <goals>
-                            <goal>single</goal>
+                            <goal>repackage</goal>
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>ee.sk.keystore.CreateKeyStoreApp</mainClass>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <appendAssemblyId>false</appendAssemblyId>
+                    <mainClass>ee.sk.keystore.CreateKeyStoreApp</mainClass>
                 </configuration>
             </plugin>
         </plugins>
