--- a/pdf-validator-keystore-generator/pom.xml
+++ b/pdf-validator-keystore-generator/pom.xml
@@ -14,6 +14,15 @@
     <description>PDF Validator: Generate Keystore for LOTL validation</description>
 
     <dependencies>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+
         <!-- DSS-->
         <dependency>
             <groupId>eu.europa.ec.joinup.sd-dss</groupId>
@@ -22,13 +31,18 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- Logging -->
         <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
         </dependency>
     </dependencies>
 
