--- a/pdf-validator-test/pom.xml
+++ b/pdf-validator-test/pom.xml
@@ -47,7 +47,13 @@
             <artifactId>mockito-all</artifactId>
 			<scope>test</scope>
         </dependency>
-
+		
+		<!-- Logging -->
+		<dependency>
+				<groupId>commons-logging</groupId>
+				<artifactId>commons-logging</artifactId>
+				<version>1.1.3</version>
+			</dependency>
 	</dependencies>
 
 	<build>
