VAL-94 Added TSL certificate info ffor every certificate and update TSL service status based on information

--- a/pdf-validator-parent/pdf-validator-monitoring/pom.xml
+++ b/pdf-validator-parent/pdf-validator-monitoring/pom.xml
@@ -46,13 +46,23 @@
         </dependency>
 
         <!-- For documenting configuration properties -->
-        <!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.json</groupId>
+                    <artifactId>json</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
-        -->
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20140107</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
