--- a/helper-scripts.conf.sample
+++ b/helper-scripts.conf.sample
@@ -1,3 +1,6 @@
 USERNAME='john.smith'
 PASSWORD='password'
 JIRA_URL_PREFIX='s/^/https:\/\/jira.sk.ee\/browse\//'
+
+TOMCAT_VERSION=7.0.64
+PDF_VALIDATOR_VERSION=1.0.1.RC1
