--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,10 @@ pdf-validator-webapp:
     - "8080:8080"
 pdf-validator-monitoring:
   build: ./pdf-validator-parent/pdf-validator-monitoring
+  environment:
+      MONITORING_HOST: http://${VAL_PDF_VALIDATOR_WEBAPP_1_PORT_8080_TCP_ADDR}:${VAL_PDF_VALIDATOR_WEBAPP_1_PORT_8080_TCP_PORT}
+      MONITORING_INTERVAL: 30000
+  links: 
+    - "pdf-validator-webapp"
   ports:
     - "9000:9000"
