--- a/pdf-validator-parent/pdf-validator-test/pom.xml
+++ b/pdf-validator-parent/pdf-validator-test/pom.xml
@@ -14,7 +14,7 @@
 	<name>PDF validator acceptance tests</name>
 	<description>Automated tests that test the PDF validation functionality over a SOAP interface, according to Estonian laws</description>
 	<artifactId>pdf-validator-test</artifactId>
-	
+
 	<dependencies>
         <dependency>
 			<groupId>junit</groupId>
@@ -35,10 +35,10 @@
 		
 		<!-- Logging -->
 		<dependency>
-				<groupId>commons-logging</groupId>
-				<artifactId>commons-logging</artifactId>
-				<version>1.1.3</version>
-			</dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.3</version>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -51,6 +51,7 @@
 					<includes>
 						<include>**/*Tests.java</include>
 					</includes>
+					<excludedGroups>ee.sk.pdfvalidatortest.configuration.IntegrationTest</excludedGroups>
 				</configuration>
 			</plugin>
 		</plugins>
