MAINTENANCE: Upgraded Spring Boot to 1.3.RC1 and build.sh will now use Maven Wrapper

--- a/travis.yml
+++ b/travis.yml
@@ -5,4 +5,4 @@ jdk:
 before_install:
   - git submodule update --init --recursive
 install: true
-script: mvn clean package -Dmaven.test.skip.exec
+script: ./mvnw clean package -Dmaven.test.skip.exec
