--- a/pdf-validator-parent/pom.xml
+++ b/pdf-validator-parent/pom.xml
@@ -53,7 +53,7 @@
 		<project.encoding>UTF-8</project.encoding>
         <language.level>1.7</language.level>
 		<spring.version>4.2.1.RELEASE</spring.version>
-        <spring.boot.version>1.3.0.M5</spring.boot.version>
+        <spring.boot.version>1.3.0.RC1</spring.boot.version>
 		<slf4j.version>1.6.6</slf4j.version>
 		<logback-classic.version>1.0.13</logback-classic.version>
 		<junit.version>4.12</junit.version>
