VAL-106 Only build develop branch because fixes to build scripts have only done there

--- a/travis.yml
+++ b/travis.yml
@@ -4,5 +4,8 @@ jdk:
   - oraclejdk7
 before_install:
   - git submodule update --init --recursive
+branches:
+  only:
+    - develop
 install: true
 script: ./mvnw clean package -Dmaven.test.skip.exec
