--- a/pdf-validator-parent/pdf-validator-test/pom.xml
+++ b/pdf-validator-parent/pdf-validator-test/pom.xml
@@ -54,6 +54,24 @@
 					<excludedGroups>ee.sk.pdfvalidatortest.configuration.IntegrationTest</excludedGroups>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.18.1</version>
+				<configuration>
+					<includes>
+						<include>**/*.java</include>
+					</includes>
+					<groups>ee.sk.pdfvalidatortest.configuration.IntegrationTest</groups>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
