--- a/pdf-validator-parent/pdf-validator-test/pom.xml
+++ b/pdf-validator-parent/pdf-validator-test/pom.xml
@@ -16,6 +16,13 @@
 	<artifactId>pdf-validator-test</artifactId>
 
 	<dependencies>
+		<dependency>
+			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
+			<artifactId>pdf-validator-webapp</artifactId>
+			<version>${project.version}</version>
+			<type>war</type>
+			<scope>test</scope>
+		</dependency>
         <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -68,6 +75,82 @@
 						<goals>
 							<goal>integration-test</goal>
 							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.3-SNAPSHOT</version>
+				<configuration>
+					<ignorePackaging>true</ignorePackaging>
+					<path>/</path>
+					<port>8080</port>
+					<tomcatVersion>7.0.64</tomcatVersion>
+					<tomcatLoggingFile>${project.basedir}/conf/logback.xml</tomcatLoggingFile>
+					<systemProperties>
+						<spring.profiles.active>development</spring.profiles.active>
+					</systemProperties>
+					<webapps>
+						<webapp>
+							<groupId>eu.europa.ec.joinup.sd-dss</groupId>
+                            <artifactId>pdf-validator-webapp</artifactId>
+                            <version>${project.version}</version>
+                            <type>war</type>
+							<asWebapp>true</asWebapp>
+							<contextPath>/pdf-validator-webapp</contextPath>
+						</webapp>
+					</webapps>
+					<extraDependencies>
+                        <dependency>
+                            <groupId>org.slf4j</groupId>
+                            <artifactId>slf4j-api</artifactId>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.slf4j</groupId>
+                            <artifactId>jcl-over-slf4j</artifactId>
+                        </dependency>
+                        <dependency>
+                            <groupId>ch.qos.logback</groupId>
+                            <artifactId>logback-classic</artifactId>
+                        </dependency>
+					</extraDependencies>
+				</configuration>
+				<executions>
+					<execution>
+						<id>start-tomcat</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<fork>true</fork>
+						</configuration>
+					</execution>
+					<execution>
+						<id>stop-tomcat</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>shutdown</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<configuration>
+					<tasks>
+						<sleep seconds="50" />
+					</tasks>
+				</configuration>
+				<executions>
+					<execution>
+						<id>sleep-for-a-while</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>run</goal>
 						</goals>
 					</execution>
 				</executions>
