--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,4 +12,5 @@ pages:
   - Monitoring Service: monitoring.md
   - Automation testing: testing.md
   - Known Issues: issues.md
+  - Documentation updateing: documentation.md
   - Appendixes: appendix.md
