VAL-104 Typo fixed in menu item

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,5 +12,5 @@ pages:
   - Monitoring Service: monitoring.md
   - Automation testing: testing.md
   - Known Issues: issues.md
-  - Documentation updateing: documentation.md
+  - Documentation updating: documentation.md
   - Appendixes: appendix.md
