VAL-111 Updatd documentation and did some Sonar code style fixes

--- a/pdf-validator-parent/pdf-validator-monitoring/pom.xml
+++ b/pdf-validator-parent/pdf-validator-monitoring/pom.xml
@@ -45,6 +45,18 @@
             <artifactId>cache-api</artifactId>
         </dependency>
 
+        <!-- Developer tools for Spring Boot -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+
+        <!--Testing setup -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
         <!-- For documenting configuration properties -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
