--- a/pdf-validator-parent/pdf-validator-monitoring/src/main/resources/config/application.properties
+++ b/pdf-validator-parent/pdf-validator-monitoring/src/main/resources/config/application.properties
@@ -1,5 +1,6 @@
 server.port=9000
 spring.messages.basename=messages/messages
+banner.location=classpath:ascii+art.txt
 
 monitoring.host=http://localhost:8080
 monitoring.path=/pdf-validator-webapp/wservice/validationService
